--- a/mainpage.css
+++ b/mainpage.css
@@ -53,6 +53,14 @@ h2{
 p{
     text-align: center;
     color: white;
+	padding-top: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-left: 60px;
+}
+
+li{
+	padding-left: 20px;
 }
 
 
